[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/npc x3.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=7]
radius = 32.0

[sub_resource type="CircleShape2D" id=3]
radius = 292.043

[sub_resource type="CircleShape2D" id=4]
radius = 37.0

[sub_resource type="Animation" id=5]
resource_name = "New Anim"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 20, 10, 70, 90 ), Rect2( 110, 10, 70, 90 ), Rect2( 210, 10, 70, 90 ), Rect2( 310, 10, 60, 90 ), Rect2( 400, 10, 70, 90 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ), Vector2( 2, 0.243 ), Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 20, 10, 70, 90 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ) ]
}

[node name="enemy" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 13
script = ExtResource( 2 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2, 0 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 20, 10, 70, 90 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="PlayerDetectopn" type="Area2D" parent="."]
modulate = Color( 0.615686, 0.933333, 0.270588, 1 )
rotation = -0.00784751
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectopn"]
shape = SubResource( 3 )

[node name="bulletDetection" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="bulletDetection"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 400 )

[connection signal="body_entered" from="PlayerDetectopn" to="." method="_on_PlayerDetectopn_body_entered"]
[connection signal="body_exited" from="PlayerDetectopn" to="." method="_on_PlayerDetectopn_body_exited"]
[connection signal="area_entered" from="bulletDetection" to="." method="_on_bulletDetection_area_entered"]
